# pipenv-docker

./: .gitlab-ci.yml  LICENSE  README.md  docker-compose.yaml  pyproject.toml  run_test.sh  tool.py
alpine/: Dockerfile
common/: Dockerfile
focal/: Dockerfile  docker-compose.test.yml
jammy/: Dockerfile  docker-compose.test.yml
kinetic/: Dockerfile
pipenv/: Dockerfile
since_jammy/: Dockerfile
test/: run_test.sh
